--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -240,3 +240,22 @@ input[type="file"] {
   .even-columns {
   }
 }
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: 50px auto; /* center it */
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
