--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -49,11 +49,28 @@ nav a:active {
   color: #d8dbaf;
 }
 
+#first-section {
+  scroll-margin-top: 80px; /* Adjust to match your header height */
+}
+#second-section {
+  scroll-margin-top: 190px;
+}
+#third-section {
+  scroll-margin-top: -15px;
+}
+
 @media (max-width: 600px) or (max-width: 820px) {
   .header-columns {
     text-align: center;
     line-height: 40px;
     grid-template-columns: 1fr;
+  }
+
+  .story-container {
+    margin-bottom: 40px;
+  }
+  #second-section {
+    scroll-margin-top: 150px;
   }
 }
 
@@ -64,16 +81,6 @@ nav a:active {
   line-height: 40px;
   padding-top: 20px;
   min-height: 645px;
-}
-
-#first-section {
-  scroll-margin-top: 80px; /* Adjust to match your header height */
-}
-#second-section {
-  scroll-margin-top: 190px;
-}
-#third-section {
-  scroll-margin-top: -15px;
 }
 
 .first-section-container {
@@ -241,6 +248,14 @@ input[type="file"] {
   }
 }
 
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  color: rgb(37, 32, 32);
+}
+
 .loader {
   width: 48px;
   height: 48px;
@@ -248,7 +263,7 @@ input[type="file"] {
   border-top: 5px solid #3498db;
   border-radius: 50%;
   animation: spin 1s linear infinite;
-  margin: 50px auto; /* center it */
+  margin-top: 10px;
 }
 
 @keyframes spin {
