--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -59,6 +59,12 @@ nav a:active {
   scroll-margin-top: -15px;
 }
 
+@media (max-width: 820px) {
+  .header-right-section {
+    justify-content: space-between;
+  }
+}
+
 @media (max-width: 600px) or (max-width: 820px) {
   .header-columns {
     text-align: center;
