--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -210,6 +210,7 @@ input[type="file"] {
   padding-top: 50px;
   line-height: 90px;
   color: #819a91;
+  margin-bottom: 100px;
 }
 
 .third-section-container h1 {
