--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -119,6 +119,7 @@ input[type="file"] {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 30px;
 }
 
 @media (max-width: 600px) or (max-width: 820px) {
