--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -108,6 +108,8 @@ input[type="file"] {
   width: 500px;
   height: 400px;
   margin-left: -50px;
+  box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
 }
 
 .generated-columns {
