--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -96,11 +96,20 @@ nav a:active {
   text-align: center;
 }
 
+.first-section-container h2 {
+  color: #819a91;
+}
+
 .file-container {
 }
 
 input[type="file"] {
   margin-bottom: 20px;
+  padding: 0.5em 2em;
+  border-radius: 20em;
+  border: none;
+  background-color: #a7c1a8;
+  color: #eeefe0;
 }
 
 .image-preview {
@@ -122,6 +131,21 @@ input[type="file"] {
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  flex-direction: column;
+  row-gap: 50px;
+}
+
+button {
+  padding: 0.5em 2em;
+  border-radius: 20em;
+  border: none;
+  background-color: #a7c1a8;
+  color: white;
+  cursor: pointer;
+}
+
+.upload-image-button {
+  margin-bottom: 2em;
 }
 
 @media (max-width: 600px) or (max-width: 820px) {
@@ -262,6 +286,12 @@ input[type="file"] {
   }
 }
 
+@media (min-width: 820px) and (max-width: 1200px) {
+  .story-container {
+    margin-bottom: 50px;
+  }
+}
+
 @media (max-width: 601px) or (max-width: 1200px) {
   .generated-columns {
     grid-template-columns: 1fr;
@@ -308,5 +338,13 @@ input[type="file"] {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+/* FOR SCROLL MARGIN TOP IN SECOND SECTION */
+
+@media (max-width: 820px) {
+  #second-section {
+    scroll-margin-top: 250px;
   }
 }
