--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -41,12 +41,19 @@ header {
   align-items: center;
 }
 
-nav a {
+nav a,
+.header-left-section a {
   text-decoration: none;
   color: #eeefe0;
 }
-nav a:active {
+nav a:active,
+.header-left-section a:active {
   color: #d8dbaf;
+}
+
+.isDisabled {
+  background-color: #c5f0c7;
+  cursor: unset;
 }
 
 #first-section {
