--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -31,13 +31,12 @@ header {
 
 .header-columns {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
 }
 
 .header-right-section {
   display: flex;
-  justify-content: space-evenly;
-  padding: 0 20px;
+  justify-content: space-between;
   align-items: center;
 }
 
