--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -123,7 +123,7 @@ input[type="file"] {
   width: 500px;
   height: 400px;
   margin-left: -50px;
-  box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.1);
+  filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.5));
   border-radius: 20px;
 }
 
